fix: bake all plugin realms by escaping forced link-at-build-time